[package]
name = "fourkeys-collector"
version = "0.1.0"
authors = ["hayasshi <daisuke0884@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
anyhow = "1.0"
